Update background by keywoz.theme.css

--- a/background by keywoz.theme.css
+++ b/background by keywoz.theme.css
@@ -1,8 +1,10 @@
 /**
-* @name background
+* @name Keywoz
 * @author Keywoz
 * @description you can custom the back ground 
 * @version 1.0.0
+* @source https://github.com/keywoz-sys
+* @Donate https://www.paypal.me/Keywoz
 */
 /*
 
