--- a/background by keywoz.theme.css
+++ b/background by keywoz.theme.css
@@ -996,7 +996,9 @@ KKKKKKKKK    KKKKKKKEEEEEEEEEEEEEEEEEEEEEE    YYYYYYYYYYYYY                WWW  
     border-color: var(--mainColor) !important;
     background-color: var(--mainColor) !important
 }
-
+/*
+by keywoz
+*/
 #app-mount .checkbox-f1HnKB[style*="rgb(79, 84, 92)"] svg path {
     fill: #fff !important
 }
@@ -1994,6 +1996,9 @@ KKKKKKKKK    KKKKKKKEEEEEEEEEEEEEEEEEEEEEE    YYYYYYYYYYYYY                WWW  
     border: none !important
 }
 
+/*
+by keywoz
+*/
 #app-mount .container-2O1UgZ {
     background-color: var(--backgroundColor01) !important;
     -webkit-box-shadow: inset 0 0 0 100000px rgba(0, 0, 0, .3), 0 0 10px 0 rgba(0, 0, 0, .5);
@@ -2992,7 +2997,9 @@ KKKKKKKKK    KKKKKKKEEEEEEEEEEEEEEEEEEEEEE    YYYYYYYYYYYYY                WWW  
 .auto_eed6a8::-webkit-scrollbar-track {
     background-color: var(--backgroundColor02);
 }
-
+/*
+by keywoz
+*/
 .auto_eed6a8::-webkit-scrollbar-thumb {
     background-color: var(--backgroundColor01);
 }
